--- a/src/themes/Admin/style/themes/blue/ui.css
+++ b/src/themes/Admin/style/themes/blue/ui.css
@@ -176,25 +176,25 @@ a:hover, .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited
 	outline:none;
 	text-decoration:none;
 }
+/* SIDEBAR */
 
-	/* SIDEBAR */
-	
 #page_wrapper #sidebar {
-	right:20px;
+	right:0;
 }
-
 #sidebar-left #page_wrapper #sidebar {
-	left:8px;
+	left:-11px;
 	right:auto;
 }
-
-	/* PAGE CONTENT */
-
-
+#page_wrapper #page-content #page-content-wrapper{
+	background:#f2f2f2;
+}
 #page_wrapper #page-content #page-content-wrapper {
 	background:#f2f2f2 url('images/sidebar-bg.png') right top repeat-y;
-}
-
+	}
+#sidebar .sidebar-content {
+	background:#f2f2f2 url('images/sidebar-bg.png') right top repeat-y;
+	}
 #sidebar-left #page_wrapper #page-content #page-content-wrapper {
 	background:#f2f2f2 url('images/sidebar-bg-left.png') left top repeat-y;
+	padding-left:202px;
 }
